@@ -27,6 +27,10 @@ maximum_object_size = 300
 
 group = proxy
 
+# backup domain categorized lists. (default: true).
+backup_domain_categorized_lists = true
+
+
 ## Performance tuning ##
 # do not change if you really know what are you doing
 
