@@ -1,3 +1,6 @@
+HEAD
+	+ Added configuration file key to omit domain categorized files
+	from backup
 2.0.7
 	+ Adapted logrotate configuration to new PID file
 	+ Added guard against empty fileList_path keys
